# EquationLearnerProject

./: README.md  ЛР_EquationLearner.docx  Сценарий_видео.docx
docs/: uml.md
qt/: CMakeLists.txt  build_windows.bat  explanation.cpp  explanation.h  graphwidget.cpp  graphwidget.h  highlighter.cpp  highlighter.h  llmclient.cpp  llmclient.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/: main.cpp
